--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "confetti-js": "0.0.15",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
+    "react-confetti": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0"
   },
