JST - home page chenged

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-v2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/jefe10jav/tic-tac-toe",
+  "homepage": "https://jefe10jav.github.io/tic-tac-toe",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
